fix: resolve type-inference and Character naming conflict in conversion service
- Map<?,?> 改为 Map<String,Object>，消除 Java 编译器类型推断歧义
- 提取 castMap/castList 辅助方法，@SuppressWarnings 范围最小化
- 显式 import com.qianniu.model.Character 优先于 java.lang.Character
- Stream.toList() 改为 Collectors.toList()，兼容 Java 16+
mvn compile 验证通过